# saltshark

./: CHANGES.md  README.md
backend/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  REST_CHERRYPY_COVERAGE.md  main.py  pyproject.toml  settings.py  test_integration.sh
backend/api/v1/: audit.py  auth.py  beacons.py  cloud.py  compliance.py  fileserver.py  grains.py  jobs.py  keys.py  mine.py  minions.py  notifications.py  orchestration.py  pillars.py  schedules.py  ssh.py  states.py  templates.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/schemas/: audit.py  auth.py  beacons.py  cloud.py  compliance.py  events.py  fileserver.py  grains.py  job.py  keys.py  mine.py  minion.py  notification.py  orchestration.py  pillar.py  runners.py  schedule.py  ssh.py  state.py  template.py
backend/app/services/: salt_api.py
backend/apps/audit/: routes.py  schemas.py
backend/apps/auth/: routes.py
backend/apps/salt/: routes.py  salt_api_client.py  schemas.py
backend/apps/system/: __init__.py  routes.py
backend/apps/webhooks/: __init__.py  routes.py
backend/config/: __init__.py  settings.py
backend/core/: config.py
backend/schemas/: audit.py  auth.py  cloud.py  job.py  keys.py  mine.py  notification.py  schedule.py  ssh.py  state.py  template.py
backend/services/: salt_api.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_beacons_mine.py  test_cloud_ssh.py  test_events.py  test_grains.py  test_keys.py  test_orchestration.py  test_runners.py  test_salt_api.py  test_schedules.py  test_states.py
(+85 files in other folders)
